Fixed links so they are visible and distiguished

--- a/theme/lanox/static/css/lanox.css
+++ b/theme/lanox/static/css/lanox.css
@@ -241,13 +241,16 @@ header .logo:hover {
     margin-bottom: 5px;
     list-style-type: none;
 }
+
 .recent-posts li div {
     padding: 5px 0;
 }
+
 .recent-posts li .title {
     font-size: 1rem;
     padding: 0;
 }
+
 .recent-posts li .date {
     float: right;
     font-size: 12px;
@@ -367,8 +370,12 @@ header h1.compressed {
     /*font-size: 2.0em;*/
 }
 
-.content a:hover {
-    border-color: #fd7f05;
+.article a {
+  border-bottom: 2px solid #fecd9d;
+}
+
+.article a:hover {
+  border-color: #FD0588;
 }
 
 .article_title a {
